--- a/recommendation-and-troubleshooting-front/src/app/navigation/navigation-user/navigation-user.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/navigation/navigation-user/navigation-user.component.html
@@ -5,7 +5,7 @@
             star_rate
         </mat-icon>
     </a>
-    <span style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
+    <span style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshootingg</span>
     <a routerLink="/" style="padding-left: 0.5%;">
         <mat-icon [ngStyle]="{'color':'white'}">
             bug_report
@@ -22,6 +22,9 @@
         <button (click)="router.navigate(['/user']);" mat-button>SomePage</button>
       </span>
 -->
+    <span style="padding-left: 3%;">
+        <button (click)="router.navigate(['/user/configurations']);" mat-button>Configurations</button>
+    </span>
 
     <span class="example-spacer" style="width: 75%"></span>
     <a routerLink="/user/view-profile" style="margin-left: 5%;">
