--- a/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.css
+++ b/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.css
@@ -3,10 +3,13 @@ table {
 }
 th.mat-header-cell{
   text-align: center !important;
-  font-size: large;
+  font-size: x-small;
+  padding-right: 3px;
 }
 td.mat-cell{
   text-align: center !important;
+  font-size: small;
+  padding-right: 3px;
 }
 
 ::ng-deep .mat-sort-header-container {
