--- a/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
@@ -2,7 +2,7 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="{{columnsToDisplay[i]}}" *ngFor="let column of columnsToIterate; let i = index">
       <th mat-header-cell *matHeaderCellDef> {{columnsToDisplay[i]}} </th>
-      <td id="row{{element.id}}" mat-cell *matCellDef="let element" (click)="clicked(element.id)" (dblclick)="doubleClicked(element.id)"> {{column==='publishedDate' ? (element[column] | date) : element[column]}} </td>
+      <td id="row{{element.id}}" mat-cell *matCellDef="let element" (click)="clicked(element.id)" (dblclick)="doubleClickedWithData(element)"> {{(column === 'touchscreen' || column === 'microphone' || column === 'camera' || column === 'ergonomic') ? (element[column] | yesNo) : element[column]}} </td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
