--- a/recommendation-and-troubleshooting-front/src/app/navigation/navigation-admin/navigation-admin.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/navigation/navigation-admin/navigation-admin.component.html
@@ -1,16 +1,12 @@
 <mat-toolbar color="primary">
 
-    <a routerLink="/">
-        <mat-icon [ngStyle]="{'color':'white'}">
-            star_rate
-        </mat-icon>
-    </a>
-    <span style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
-    <a routerLink="/" style="padding-left: 0.5%;">
-        <mat-icon [ngStyle]="{'color':'white'}">
-            bug_report
-        </mat-icon>
-    </a>
+    <mat-icon (click)="router.navigateByUrl('/admin/recommendation')" [ngStyle]="{'color':'white'}">
+        star_rate
+    </mat-icon>
+    <span (click)="router.navigateByUrl('/admin')" style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
+    <mat-icon (click)="router.navigateByUrl('/admin/troubleshooting')" [ngStyle]="{'color':'white'}" style="padding-left: 0.5%;">
+        bug_report
+    </mat-icon>
 
     <!--
     <span style="padding-left: 3%;">
@@ -19,7 +15,7 @@
 -->
 
     <span class="example-spacer" style="width: 75%"></span>
-    <a routerLink="/admin/view-profile" style="margin-left: 5%;">
+    <a (click)="router.navigateByUrl('/admin/view-profile')" style="margin-left: 5%;">
         <button mat-flat-button color="primary">
             <mat-icon [ngStyle]="{'color':'white'}">
                 face
