--- a/recommendation-and-troubleshooting-front/src/app/navigation/navigation-user/navigation-user.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/navigation/navigation-user/navigation-user.component.html
@@ -1,21 +1,12 @@
 <mat-toolbar color="primary">
 
-    <a routerLink="/">
-        <mat-icon [ngStyle]="{'color':'white'}">
-            star_rate
-        </mat-icon>
-    </a>
-    <span style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
-    <a routerLink="/" style="padding-left: 0.5%;">
-        <mat-icon [ngStyle]="{'color':'white'}">
-            bug_report
-        </mat-icon>
-    </a>
-    <a routerLink="/" style="padding-left: 0.5%;">
-        <mat-icon [ngStyle]="{'color':'white'}">
-            bug_report
-        </mat-icon>
-    </a>
+  <mat-icon (click)="router.navigateByUrl('/user/recommendation')" [ngStyle]="{'color':'white'}">
+    star_rate
+  </mat-icon>
+  <span (click)="router.navigateByUrl('/user')" style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
+  <mat-icon (click)="router.navigateByUrl('/user/troubleshooting')" [ngStyle]="{'color':'white'}" style="padding-left: 0.5%;">
+    bug_report
+  </mat-icon>s
 
     <!--
     <span style="padding-left: 3%;">
@@ -24,7 +15,7 @@
 -->
 
     <span class="example-spacer" style="width: 75%"></span>
-    <a routerLink="/user/view-profile" style="margin-left: 5%;">
+    <a (click)="router.navigateByUrl('/user/view-profile')" style="margin-left: 5%;">
         <button mat-flat-button color="primary">
             <mat-icon [ngStyle]="{'color':'white'}">
                 face
