--- a/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
@@ -6,8 +6,8 @@
     </ng-container>
 
     <ng-container matColumnDef="delete">
-      <th mat-header-cell *matHeaderCellDef> delete </th>
-      <td mat-cell *matCellDef="let element">  <button mat-raised-button color="warn" (click)="deleted(element.id)" id="{{element.id}}">Delete</button>
+      <th mat-header-cell *matHeaderCellDef > </th>
+      <td mat-cell *matCellDef="let element">  <button  *ngIf="role==1" mat-raised-button color="warn" (click)="deleted(element.id)" id="{{element.id}}">Delete</button>
       </td>
     </ng-container>
 
