--- a/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.css
+++ b/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.css
@@ -3,7 +3,7 @@ table {
 }
 th.mat-header-cell{
   text-align: center !important;
-  font-size: x-small;
+  font-size: medium;
   padding-right: 3px;
 }
 td.mat-cell{
