--- a/recommendation-and-troubleshooting-front/src/app/components/recommendation/add-requirement/add-requirement.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/components/recommendation/add-requirement/add-requirement.component.html
@@ -1,9 +1,7 @@
 <h1 class="mat-display-1;" style="text-align: center;  margin-top: 1%;">Add requirements</h1>
 <mat-divider></mat-divider>
 <br><br>
-
-<div style="padding-left: 1%;padding-right: 1%">
-
+<div style="display: block; text-align: center; margin: 3%;">
     <form [formGroup]="formAddUsageReq" name="formAddUsageReq" (ngSubmit)="submitFormAddUsageReq()" style="display: block; width: 100%">
         <mat-form-field name="form-field-usages" [style.width.%]="80" [style.margin.%]="1">
             <mat-label>Choose usage</mat-label>
