--- a/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/shared/table/table.component.html
@@ -2,12 +2,17 @@
   <table mat-table [dataSource]="dataSource">
     <ng-container matColumnDef="{{columnsToDisplay[i]}}" *ngFor="let column of columnsToIterate; let i = index">
       <th mat-header-cell *matHeaderCellDef> {{columnsToDisplay[i]}} </th>
-      <td id="row{{element.id}}" mat-cell *matCellDef="let element" (click)="clicked(element.id)" (dblclick)="doubleClickedWithData(element)"> {{(column === 'touchscreen' || column === 'microphone' || column === 'camera' || column === 'ergonomic') ? (element[column] | yesNo) : element[column]}} </td>
+      <td id="row{{element.id}}" mat-cell *matCellDef="let element" (click)="clicked(element.id)" (dblclick)="doubleClickedWithData(element)"> {{(column === 'touchscreen' || column === 'microphone' || column === 'camera' || column === 'ergonomic') ? (element[column] | yesNo) : (column ==='averageRating' ? (element[column] | number : '1.0-2') : element[column])}}</td>
     </ng-container>
 
     <ng-container matColumnDef="delete">
       <th mat-header-cell *matHeaderCellDef > </th>
       <td mat-cell *matCellDef="let element">  <button  *ngIf="role === 'admin'" mat-raised-button color="warn" (click)="deleted(element.id)" id="{{element.id}}">Delete</button>
+      </td>
+    </ng-container>
+    <ng-container matColumnDef="deleteData">
+      <th mat-header-cell *matHeaderCellDef > </th>
+      <td mat-cell *matCellDef="let element">  <button  *ngIf="role === 'admin'" mat-raised-button color="warn" (click)="deletedData(element)" id="{{element}}">Delete</button>
       </td>
     </ng-container>
 
