--- a/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/troubleshoot/troubleshoot.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/troubleshoot/troubleshoot.component.html
@@ -1,1 +1,23 @@
-<p>troubleshoot works!</p>
+<h1 class="mat-display-1;" style="text-align: center;  margin-top: 1%;">Troubleshoot</h1>
+<mat-divider></mat-divider>
+<br><br>
+<div style="display: block; text-align: center; margin-top: 10%; font-size: large">
+
+  <mat-label >Choose bug description:</mat-label>
+
+  <form  [formGroup]="form" (ngSubmit)="troubleshoot()" style="padding-left: 25px;">
+
+    <mat-form-field appearance="legacy" style="margin-left: 2%">
+      <mat-label>Description(s):</mat-label>
+      <mat-select [formControl]="form.controls.descriptions" multiple>
+        <mat-option matTooltip="{{desc['problemDescription']}}" matTooltipClass="tooltip"  [matTooltipPosition]="'after'" *ngFor="let desc of descriptions" [value]="desc">{{desc['problemDescription']}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <br>
+    <button mat-raised-button type="submit" [disabled]="!form.valid">Troubleshoot</button>
+
+  </form>
+
+  <br><br><br><br>
+
+</div>
