--- a/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/bug/bug.component.css
+++ b/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/bug/bug.component.css
@@ -5,3 +5,12 @@ mat-form-field {
 ::ng-deep .mat-tooltip {
   font-size: 14px !important;
 }
+
+
+::ng-deep .mat-primary .mat-option.mat-selected:not(.mat-option-disabled) {
+  color: unset;
+}
+
+::ng-deep .mat-option-pseudo-checkbox.mat-pseudo-checkbox-checked {
+  background-color: #69F0AE;
+}
