--- a/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/unsolved-bugs/unsolved-bugs.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/components/troubleshooting/unsolved-bugs/unsolved-bugs.component.html
@@ -1,4 +1,4 @@
-<h1 class="mat-display-1;" style="text-align: center;  margin-top: 1%;">Frequent Bugs</h1>
+<h1 class="mat-display-1;" style="text-align: center;  margin-top: 1%;">Unsolved Bugs</h1>
 <mat-divider></mat-divider>
 <br><br>
 
