last changes + sign up front

--- a/recommendation-and-troubleshooting-front/src/app/navigation/navigation-admin/navigation-admin.component.html
+++ b/recommendation-and-troubleshooting-front/src/app/navigation/navigation-admin/navigation-admin.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar color="primary">
 
-  <mat-icon (click)="router.navigateByUrl('/admin/recommendation')" [ngStyle]="{'color':'white'}">
+  <mat-icon class="make-cursor" (click)="router.navigateByUrl('/admin/recommendation')" [ngStyle]="{'color':'white'}">
     star_rate
   </mat-icon>
-  <span (click)="router.navigateByUrl('/admin')" style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
-  <mat-icon (click)="router.navigateByUrl('/admin/troubleshooting')" [ngStyle]="{'color':'white'}"
+  <span class="make-cursor" (click)="router.navigateByUrl('/admin')" style="padding-left: 0.5%; font-size: medium;">Recommendation and Troubleshooting</span>
+  <mat-icon class="make-cursor" (click)="router.navigateByUrl('/admin/troubleshooting')" [ngStyle]="{'color':'white'}"
             style="padding-left: 0.5%;">
     bug_report
   </mat-icon>
