--- a/recommendation-and-troubleshooting-front/src/app/components/auth/log-in/log-in.component.css
+++ b/recommendation-and-troubleshooting-front/src/app/components/auth/log-in/log-in.component.css
@@ -1,3 +1,12 @@
 mat-form-field {
     width: 25%;
   }
+
+.mat-form-field-label mat-label {
+  pointer-events: auto;
+}
+
+mat-label {
+  pointer-events: auto;
+  cursor: pointer;
+}
